# smlx

./: .gitignore  CMakeLists.txt  README.md
docs/: overview.md
examples/: hello_lib.c  run_exported.c
scripts/: bench.sh  bench_mlx_lm.py  chat.py  export_llama.py  export_llama_simple.py  fetch-thirdparty.sh  ref_argmax.py  ref_argmax_4bit.py  ref_qwen.py  run_exported.py  run_exported_simple.py  test.sh
src/: chat_main.cpp  main.c  main.cpp  smlx.c  smlx.h
